// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Acceptance: ember help prints a single blueprints 1`] = `
"Requested ember-cli commands:

ember generate [33m<blueprint>[39m [36m<options...>[39m
  Generates new code from blueprints.
  [90maliases: g[39m
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--pod[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -p, -pods[39m
  [36m--classic[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -c[39m
  [36m--dummy[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -dum, -id[39m
  [36m--in-repo-addon[39m [36m(String)[39m [36m(Default: null)[39m
    [90maliases: --in-repo <value>, -ir <value>[39m
  [36m--lint-fix[39m [36m(Boolean)[39m [36m(Default: true)[39m
  [36m--in[39m [36m(String)[39m [36m(Default: null)[39m Runs a blueprint against an in repo addon. A path is expected, relative to the root of the project.

      blueprint [33m<name>[39m
        [90mGenerates a blueprint and definition.[39m


"
`;

exports[`Acceptance: ember help prints addon commands 1`] = `
"Usage: ember [33m<command (Default: help)>[39m

Available commands in ember-cli:

ember addon [33m<addon-name>[39m [36m<options...>[39m
  Generates a new folder structure for building an addon, complete with test harness.
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--blueprint[39m [36m(String)[39m [36m(Default: addon)[39m
    [90maliases: -b <value>[39m
  [36m--skip-npm[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sn[39m
  [36m--skip-bower[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sb[39m
  [36m--skip-git[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sg[39m
  [36m--yarn[39m [36m(Boolean)[39m
  [36m--directory[39m [36m(String)[39m
    [90maliases: -dir <value>[39m
  [36m--lang[39m [36m(String)[39m Sets the base human language of the addon's own test application via index.html

ember asset-sizes [36m<options...>[39m
  Shows the sizes of your asset files.
  [36m--output-path[39m [36m(Path)[39m [36m(Default: dist/)[39m
    [90maliases: -o <value>[39m
  [36m--json[39m [36m(Boolean)[39m [36m(Default: false)[39m

ember build [36m<options...>[39m
  Builds your app and places it into the output path (dist/ by default).
  [90maliases: b[39m
  [36m--environment[39m [36m(String)[39m [36m(Default: development)[39m Possible values are \\"development\\", \\"production\\", and \\"test\\".
    [90maliases: -e <value>, -dev (--environment=development), -prod (--environment=production)[39m
  [36m--output-path[39m [36m(Path)[39m [36m(Default: dist/)[39m
    [90maliases: -o <value>[39m
  [36m--watch[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -w[39m
  [36m--watcher[39m [36m(String)[39m
  [36m--suppress-sizes[39m [36m(Boolean)[39m [36m(Default: false)[39m

ember destroy [33m<blueprint>[39m [36m<options...>[39m
  Destroys code generated by \`generate\` command.
  [90maliases: d[39m
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--pod[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -p, -pods[39m
  [36m--classic[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -c[39m
  [36m--dummy[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -dum, -id[39m
  [36m--in-repo-addon[39m [36m(String)[39m [36m(Default: null)[39m
    [90maliases: --in-repo <value>, -ir <value>[39m
  [36m--in[39m [36m(String)[39m [36m(Default: null)[39m Runs a blueprint against an in repo addon. A path is expected, relative to the root of the project.

ember generate [33m<blueprint>[39m [36m<options...>[39m
  Generates new code from blueprints.
  [90maliases: g[39m
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--pod[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -p, -pods[39m
  [36m--classic[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -c[39m
  [36m--dummy[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -dum, -id[39m
  [36m--in-repo-addon[39m [36m(String)[39m [36m(Default: null)[39m
    [90maliases: --in-repo <value>, -ir <value>[39m
  [36m--lint-fix[39m [36m(Boolean)[39m [36m(Default: true)[39m
  [36m--in[39m [36m(String)[39m [36m(Default: null)[39m Runs a blueprint against an in repo addon. A path is expected, relative to the root of the project.

ember help [33m<command-name (Default: all)>[39m [36m<options...>[39m
  Outputs the usage instructions for all commands or the provided command
  [90maliases: h, --help, -h[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--json[39m [36m(Boolean)[39m [36m(Default: false)[39m

ember init [33m<glob-pattern>[39m [36m<options...>[39m
  Reinitializes a new ember-cli project in the current folder.
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--blueprint[39m [36m(String)[39m
    [90maliases: -b <value>[39m
  [36m--skip-npm[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sn[39m
  [36m--skip-bower[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sb[39m
  [36m--lint-fix[39m [36m(Boolean)[39m [36m(Default: true)[39m
  [36m--welcome[39m [36m(Boolean)[39m [36m(Default: true)[39m Installs and uses {{ember-welcome-page}}. Use --no-welcome to skip it.
  [36m--yarn[39m [36m(Boolean)[39m
  [36m--name[39m [36m(String)[39m [36m(Default: \\"\\")[39m
    [90maliases: -n <value>[39m
  [36m--lang[39m [36m(String)[39m Sets the base human language of the application via index.html
  [36m--embroider[39m [36m(Boolean)[39m [36m(Default: false)[39m Enables the build system to use Embroider

ember install [33m<addon-name>[39m [36m<options...>[39m
  Installs an ember-cli addon from npm.
  [90maliases: i[39m
  [36m--save[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -S[39m
  [36m--save-dev[39m [36m(Boolean)[39m [36m(Default: true)[39m
    [90maliases: -D[39m
  [36m--save-exact[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -E, --exact[39m
  [36m--yarn[39m [36m(Boolean)[39m Use --yarn to enforce yarn usage, or --no-yarn to enforce npm

ember new [33m<app-name>[39m [36m<options...>[39m
  Creates a new directory and runs [32member init[39m in it.
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--blueprint[39m [36m(String)[39m [36m(Default: app)[39m
    [90maliases: -b <value>[39m
  [36m--skip-npm[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sn[39m
  [36m--skip-bower[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sb[39m
  [36m--skip-git[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sg[39m
  [36m--welcome[39m [36m(Boolean)[39m [36m(Default: true)[39m Installs and uses {{ember-welcome-page}}. Use --no-welcome to skip it.
  [36m--yarn[39m [36m(Boolean)[39m
  [36m--directory[39m [36m(String)[39m
    [90maliases: -dir <value>[39m
  [36m--lang[39m [36m(String)[39m Sets the base human language of the application via index.html
  [36m--embroider[39m [36m(Boolean)[39m [36m(Default: false)[39m Enables the build system to use Embroider

ember serve [36m<options...>[39m
  Builds and serves your app, rebuilding on file changes.
  [90maliases: server, s[39m
  [36m--port[39m [36m(Number)[39m [36m(Default: 4200)[39m To use a port different than 4200. Pass 0 to automatically pick an available port.
    [90maliases: -p <value>[39m
  [36m--host[39m [36m(String)[39m Listens on all interfaces by default
    [90maliases: -H <value>[39m
  [36m--proxy[39m [36m(String)[39m
    [90maliases: -pr <value>, -pxy <value>[39m
  [36m--proxy-in-timeout[39m [36m(Number)[39m [36m(Default: 120000)[39m When using --proxy: timeout (in ms) for incoming requests
    [90maliases: -pit <value>[39m
  [36m--proxy-out-timeout[39m [36m(Number)[39m [36m(Default: 0)[39m When using --proxy: timeout (in ms) for outgoing requests
    [90maliases: -pot <value>[39m
  [36m--secure-proxy[39m [36m(Boolean)[39m [36m(Default: true)[39m Set to false to proxy self-signed SSL certificates
    [90maliases: -spr[39m
  [36m--transparent-proxy[39m [36m(Boolean)[39m [36m(Default: true)[39m Set to false to omit x-forwarded-* headers when proxying
    [90maliases: --transp[39m
  [36m--watcher[39m [36m(String)[39m [36m(Default: events)[39m
    [90maliases: -w <value>[39m
  [36m--live-reload[39m [36m(Boolean)[39m [36m(Default: true)[39m
    [90maliases: -lr[39m
  [36m--live-reload-host[39m [36m(String)[39m Defaults to host
    [90maliases: -lrh <value>[39m
  [36m--live-reload-base-url[39m [36m(String)[39m Defaults to baseURL
    [90maliases: -lrbu <value>[39m
  [36m--live-reload-port[39m [36m(Number)[39m Defaults to same port as ember app
    [90maliases: -lrp <value>[39m
  [36m--live-reload-prefix[39m [36m(String)[39m [36m(Default: _lr)[39m Default to _lr
    [90maliases: --lrprefix <value>[39m
  [36m--environment[39m [36m(String)[39m [36m(Default: development)[39m Possible values are \\"development\\", \\"production\\", and \\"test\\".
    [90maliases: -e <value>, -dev (--environment=development), -prod (--environment=production)[39m
  [36m--output-path[39m [36m(Path)[39m [36m(Default: dist/)[39m
    [90maliases: -op <value>, -out <value>[39m
  [36m--ssl[39m [36m(Boolean)[39m [36m(Default: false)[39m Set to true to configure Ember CLI to serve using SSL.
  [36m--ssl-key[39m [36m(String)[39m [36m(Default: ssl/server.key)[39m Specify the private key to use for SSL.
  [36m--ssl-cert[39m [36m(String)[39m [36m(Default: ssl/server.crt)[39m Specify the certificate to use for SSL.
  [36m--path[39m [36m(Path)[39m Reuse an existing build at given path.

ember test [36m<options...>[39m
  Runs your app's test suite.
  [90maliases: t[39m
  [36m--environment[39m [36m(String)[39m [36m(Default: test)[39m Possible values are \\"development\\", \\"production\\", and \\"test\\".
    [90maliases: -e <value>[39m
  [36m--config-file[39m [36m(String)[39m
    [90maliases: -c <value>, -cf <value>[39m
  [36m--server[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -s[39m
  [36m--host[39m [36m(String)[39m
    [90maliases: -H <value>[39m
  [36m--test-port[39m [36m(Number)[39m [36m(Default: 7357)[39m The test port to use when running tests. Pass 0 to automatically pick an available port
    [90maliases: -tp <value>[39m
  [36m--filter[39m [36m(String)[39m A string to filter tests to run
    [90maliases: -f <value>[39m
  [36m--module[39m [36m(String)[39m The name of a test module to run
    [90maliases: -m <value>[39m
  [36m--watcher[39m [36m(String)[39m [36m(Default: events)[39m
    [90maliases: -w <value>[39m
  [36m--launch[39m [36m(String)[39m [36m(Default: false)[39m A comma separated list of browsers to launch for tests.
  [36m--reporter[39m [36m(String)[39m Test reporter to use [tap|dot|xunit] (default: tap)
    [90maliases: -r <value>[39m
  [36m--silent[39m [36m(Boolean)[39m [36m(Default: false)[39m Suppress any output except for the test report
  [36m--ssl[39m [36m(Boolean)[39m [36m(Default: false)[39m Set to true to configure testem to run the test suite using SSL.
  [36m--ssl-key[39m [36m(String)[39m [36m(Default: ssl/server.key)[39m Specify the private key to use for SSL.
  [36m--ssl-cert[39m [36m(String)[39m [36m(Default: ssl/server.crt)[39m Specify the certificate to use for SSL.
  [36m--testem-debug[39m [36m(String)[39m File to write a debug log from testem
  [36m--test-page[39m [36m(String)[39m Test page to invoke
  [36m--path[39m [36m(Path)[39m Reuse an existing build at given path.
  [36m--query[39m [36m(String)[39m A query string to append to the test page URL.
  [36m--output-path[39m [36m(Path)[39m
    [90maliases: -o <value>[39m

ember version [36m<options...>[39m
  outputs ember-cli version
  [90maliases: v, --version, -v[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m


Available commands from dummy-addon:
ember foo [33m<speed>[39m [36m<options...>[39m
  Initializes the warp drive.
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m

"
`;

exports[`Acceptance: ember help prints all blueprints 1`] = `
"Requested ember-cli commands:

ember generate [33m<blueprint>[39m [36m<options...>[39m
  Generates new code from blueprints.
  [90maliases: g[39m
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--pod[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -p, -pods[39m
  [36m--classic[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -c[39m
  [36m--dummy[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -dum, -id[39m
  [36m--in-repo-addon[39m [36m(String)[39m [36m(Default: null)[39m
    [90maliases: --in-repo <value>, -ir <value>[39m
  [36m--lint-fix[39m [36m(Boolean)[39m [36m(Default: true)[39m
  [36m--in[39m [36m(String)[39m [36m(Default: null)[39m Runs a blueprint against an in repo addon. A path is expected, relative to the root of the project.


  Available blueprints:
    ember-cli:
      addon [33m<name>[39m
        [90mThe default blueprint for ember-cli addons.[39m
      addon-import [33m<name>[39m
        [90mGenerates an import wrapper.[39m
      app [33m<name>[39m
        [90mThe default blueprint for ember-cli projects.[39m
      blueprint [33m<name>[39m
        [90mGenerates a blueprint and definition.[39m
      http-mock [33m<endpoint-path>[39m
        [90mGenerates a mock api endpoint in /api prefix.[39m
      http-proxy [33m<local-path> <remote-url>[39m
        [90mGenerates a relative proxy to another server.[39m
      in-repo-addon [33m<name>[39m
        [90mThe blueprint for addon in repo ember-cli addons.[39m
      lib [33m<name>[39m
        [90mGenerates a lib directory for in-repo addons.[39m
      server [33m<name>[39m
        [90mGenerates a server directory for mocks and proxies.[39m
      vendor-shim [33m<name>[39m
        [90mGenerates an ES6 module shim for global libraries.[39m

"
`;

exports[`Acceptance: ember help prints blueprints from addons 1`] = `
"Requested ember-cli commands:

ember generate [33m<blueprint>[39m [36m<options...>[39m
  Generates new code from blueprints.
  [90maliases: g[39m
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--pod[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -p, -pods[39m
  [36m--classic[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -c[39m
  [36m--dummy[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -dum, -id[39m
  [36m--in-repo-addon[39m [36m(String)[39m [36m(Default: null)[39m
    [90maliases: --in-repo <value>, -ir <value>[39m
  [36m--lint-fix[39m [36m(Boolean)[39m [36m(Default: true)[39m
  [36m--in[39m [36m(String)[39m [36m(Default: null)[39m Runs a blueprint against an in repo addon. A path is expected, relative to the root of the project.


  Available blueprints:
    fixtures:
      basic [33m<name>[39m
        [90mA basic blueprint[39m
      basic_2 [33m<name>[39m
        [90mAnother basic blueprint[39m
      exporting-object [33m<name>[39m
        [90mA blueprint that exports an object[39m
      with-templating [33m<name>[39m
        [90mA blueprint with templating[39m
    ember-cli:
      addon [33m<name>[39m
        [90mThe default blueprint for ember-cli addons.[39m
      addon-import [33m<name>[39m
        [90mGenerates an import wrapper.[39m
      app [33m<name>[39m
        [90mThe default blueprint for ember-cli projects.[39m
      blueprint [33m<name>[39m
        [90mGenerates a blueprint and definition.[39m
      http-mock [33m<endpoint-path>[39m
        [90mGenerates a mock api endpoint in /api prefix.[39m
      http-proxy [33m<local-path> <remote-url>[39m
        [90mGenerates a relative proxy to another server.[39m
      in-repo-addon [33m<name>[39m
        [90mThe blueprint for addon in repo ember-cli addons.[39m
      lib [33m<name>[39m
        [90mGenerates a lib directory for in-repo addons.[39m
      server [33m<name>[39m
        [90mGenerates a server directory for mocks and proxies.[39m
      vendor-shim [33m<name>[39m
        [90mGenerates an ES6 module shim for global libraries.[39m

"
`;

exports[`Acceptance: ember help prints single addon commands 1`] = `
"Requested ember-cli commands:

ember foo [33m<speed>[39m [36m<options...>[39m
  Initializes the warp drive.
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m

"
`;

exports[`Acceptance: ember help works 1`] = `
"Usage: ember [33m<command (Default: help)>[39m

Available commands in ember-cli:

ember addon [33m<addon-name>[39m [36m<options...>[39m
  Generates a new folder structure for building an addon, complete with test harness.
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--blueprint[39m [36m(String)[39m [36m(Default: addon)[39m
    [90maliases: -b <value>[39m
  [36m--skip-npm[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sn[39m
  [36m--skip-bower[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sb[39m
  [36m--skip-git[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sg[39m
  [36m--yarn[39m [36m(Boolean)[39m
  [36m--directory[39m [36m(String)[39m
    [90maliases: -dir <value>[39m
  [36m--lang[39m [36m(String)[39m Sets the base human language of the addon's own test application via index.html

ember asset-sizes [36m<options...>[39m
  Shows the sizes of your asset files.
  [36m--output-path[39m [36m(Path)[39m [36m(Default: dist/)[39m
    [90maliases: -o <value>[39m
  [36m--json[39m [36m(Boolean)[39m [36m(Default: false)[39m

ember build [36m<options...>[39m
  Builds your app and places it into the output path (dist/ by default).
  [90maliases: b[39m
  [36m--environment[39m [36m(String)[39m [36m(Default: development)[39m Possible values are \\"development\\", \\"production\\", and \\"test\\".
    [90maliases: -e <value>, -dev (--environment=development), -prod (--environment=production)[39m
  [36m--output-path[39m [36m(Path)[39m [36m(Default: dist/)[39m
    [90maliases: -o <value>[39m
  [36m--watch[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -w[39m
  [36m--watcher[39m [36m(String)[39m
  [36m--suppress-sizes[39m [36m(Boolean)[39m [36m(Default: false)[39m

ember destroy [33m<blueprint>[39m [36m<options...>[39m
  Destroys code generated by \`generate\` command.
  [90maliases: d[39m
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--pod[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -p, -pods[39m
  [36m--classic[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -c[39m
  [36m--dummy[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -dum, -id[39m
  [36m--in-repo-addon[39m [36m(String)[39m [36m(Default: null)[39m
    [90maliases: --in-repo <value>, -ir <value>[39m
  [36m--in[39m [36m(String)[39m [36m(Default: null)[39m Runs a blueprint against an in repo addon. A path is expected, relative to the root of the project.

ember generate [33m<blueprint>[39m [36m<options...>[39m
  Generates new code from blueprints.
  [90maliases: g[39m
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--pod[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -p, -pods[39m
  [36m--classic[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -c[39m
  [36m--dummy[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -dum, -id[39m
  [36m--in-repo-addon[39m [36m(String)[39m [36m(Default: null)[39m
    [90maliases: --in-repo <value>, -ir <value>[39m
  [36m--lint-fix[39m [36m(Boolean)[39m [36m(Default: true)[39m
  [36m--in[39m [36m(String)[39m [36m(Default: null)[39m Runs a blueprint against an in repo addon. A path is expected, relative to the root of the project.

ember help [33m<command-name (Default: all)>[39m [36m<options...>[39m
  Outputs the usage instructions for all commands or the provided command
  [90maliases: h, --help, -h[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--json[39m [36m(Boolean)[39m [36m(Default: false)[39m

ember init [33m<glob-pattern>[39m [36m<options...>[39m
  Reinitializes a new ember-cli project in the current folder.
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--blueprint[39m [36m(String)[39m
    [90maliases: -b <value>[39m
  [36m--skip-npm[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sn[39m
  [36m--skip-bower[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sb[39m
  [36m--lint-fix[39m [36m(Boolean)[39m [36m(Default: true)[39m
  [36m--welcome[39m [36m(Boolean)[39m [36m(Default: true)[39m Installs and uses {{ember-welcome-page}}. Use --no-welcome to skip it.
  [36m--yarn[39m [36m(Boolean)[39m
  [36m--name[39m [36m(String)[39m [36m(Default: \\"\\")[39m
    [90maliases: -n <value>[39m
  [36m--lang[39m [36m(String)[39m Sets the base human language of the application via index.html
  [36m--embroider[39m [36m(Boolean)[39m [36m(Default: false)[39m Enables the build system to use Embroider

ember install [33m<addon-name>[39m [36m<options...>[39m
  Installs an ember-cli addon from npm.
  [90maliases: i[39m
  [36m--save[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -S[39m
  [36m--save-dev[39m [36m(Boolean)[39m [36m(Default: true)[39m
    [90maliases: -D[39m
  [36m--save-exact[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -E, --exact[39m
  [36m--yarn[39m [36m(Boolean)[39m Use --yarn to enforce yarn usage, or --no-yarn to enforce npm

ember new [33m<app-name>[39m [36m<options...>[39m
  Creates a new directory and runs [32member init[39m in it.
  [36m--dry-run[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -d[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -v[39m
  [36m--blueprint[39m [36m(String)[39m [36m(Default: app)[39m
    [90maliases: -b <value>[39m
  [36m--skip-npm[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sn[39m
  [36m--skip-bower[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sb[39m
  [36m--skip-git[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -sg[39m
  [36m--welcome[39m [36m(Boolean)[39m [36m(Default: true)[39m Installs and uses {{ember-welcome-page}}. Use --no-welcome to skip it.
  [36m--yarn[39m [36m(Boolean)[39m
  [36m--directory[39m [36m(String)[39m
    [90maliases: -dir <value>[39m
  [36m--lang[39m [36m(String)[39m Sets the base human language of the application via index.html
  [36m--embroider[39m [36m(Boolean)[39m [36m(Default: false)[39m Enables the build system to use Embroider

ember serve [36m<options...>[39m
  Builds and serves your app, rebuilding on file changes.
  [90maliases: server, s[39m
  [36m--port[39m [36m(Number)[39m [36m(Default: 4200)[39m To use a port different than 4200. Pass 0 to automatically pick an available port.
    [90maliases: -p <value>[39m
  [36m--host[39m [36m(String)[39m Listens on all interfaces by default
    [90maliases: -H <value>[39m
  [36m--proxy[39m [36m(String)[39m
    [90maliases: -pr <value>, -pxy <value>[39m
  [36m--proxy-in-timeout[39m [36m(Number)[39m [36m(Default: 120000)[39m When using --proxy: timeout (in ms) for incoming requests
    [90maliases: -pit <value>[39m
  [36m--proxy-out-timeout[39m [36m(Number)[39m [36m(Default: 0)[39m When using --proxy: timeout (in ms) for outgoing requests
    [90maliases: -pot <value>[39m
  [36m--secure-proxy[39m [36m(Boolean)[39m [36m(Default: true)[39m Set to false to proxy self-signed SSL certificates
    [90maliases: -spr[39m
  [36m--transparent-proxy[39m [36m(Boolean)[39m [36m(Default: true)[39m Set to false to omit x-forwarded-* headers when proxying
    [90maliases: --transp[39m
  [36m--watcher[39m [36m(String)[39m [36m(Default: events)[39m
    [90maliases: -w <value>[39m
  [36m--live-reload[39m [36m(Boolean)[39m [36m(Default: true)[39m
    [90maliases: -lr[39m
  [36m--live-reload-host[39m [36m(String)[39m Defaults to host
    [90maliases: -lrh <value>[39m
  [36m--live-reload-base-url[39m [36m(String)[39m Defaults to baseURL
    [90maliases: -lrbu <value>[39m
  [36m--live-reload-port[39m [36m(Number)[39m Defaults to same port as ember app
    [90maliases: -lrp <value>[39m
  [36m--live-reload-prefix[39m [36m(String)[39m [36m(Default: _lr)[39m Default to _lr
    [90maliases: --lrprefix <value>[39m
  [36m--environment[39m [36m(String)[39m [36m(Default: development)[39m Possible values are \\"development\\", \\"production\\", and \\"test\\".
    [90maliases: -e <value>, -dev (--environment=development), -prod (--environment=production)[39m
  [36m--output-path[39m [36m(Path)[39m [36m(Default: dist/)[39m
    [90maliases: -op <value>, -out <value>[39m
  [36m--ssl[39m [36m(Boolean)[39m [36m(Default: false)[39m Set to true to configure Ember CLI to serve using SSL.
  [36m--ssl-key[39m [36m(String)[39m [36m(Default: ssl/server.key)[39m Specify the private key to use for SSL.
  [36m--ssl-cert[39m [36m(String)[39m [36m(Default: ssl/server.crt)[39m Specify the certificate to use for SSL.
  [36m--path[39m [36m(Path)[39m Reuse an existing build at given path.

ember test [36m<options...>[39m
  Runs your app's test suite.
  [90maliases: t[39m
  [36m--environment[39m [36m(String)[39m [36m(Default: test)[39m Possible values are \\"development\\", \\"production\\", and \\"test\\".
    [90maliases: -e <value>[39m
  [36m--config-file[39m [36m(String)[39m
    [90maliases: -c <value>, -cf <value>[39m
  [36m--server[39m [36m(Boolean)[39m [36m(Default: false)[39m
    [90maliases: -s[39m
  [36m--host[39m [36m(String)[39m
    [90maliases: -H <value>[39m
  [36m--test-port[39m [36m(Number)[39m [36m(Default: 7357)[39m The test port to use when running tests. Pass 0 to automatically pick an available port
    [90maliases: -tp <value>[39m
  [36m--filter[39m [36m(String)[39m A string to filter tests to run
    [90maliases: -f <value>[39m
  [36m--module[39m [36m(String)[39m The name of a test module to run
    [90maliases: -m <value>[39m
  [36m--watcher[39m [36m(String)[39m [36m(Default: events)[39m
    [90maliases: -w <value>[39m
  [36m--launch[39m [36m(String)[39m [36m(Default: false)[39m A comma separated list of browsers to launch for tests.
  [36m--reporter[39m [36m(String)[39m Test reporter to use [tap|dot|xunit] (default: tap)
    [90maliases: -r <value>[39m
  [36m--silent[39m [36m(Boolean)[39m [36m(Default: false)[39m Suppress any output except for the test report
  [36m--ssl[39m [36m(Boolean)[39m [36m(Default: false)[39m Set to true to configure testem to run the test suite using SSL.
  [36m--ssl-key[39m [36m(String)[39m [36m(Default: ssl/server.key)[39m Specify the private key to use for SSL.
  [36m--ssl-cert[39m [36m(String)[39m [36m(Default: ssl/server.crt)[39m Specify the certificate to use for SSL.
  [36m--testem-debug[39m [36m(String)[39m File to write a debug log from testem
  [36m--test-page[39m [36m(String)[39m Test page to invoke
  [36m--path[39m [36m(Path)[39m Reuse an existing build at given path.
  [36m--query[39m [36m(String)[39m A query string to append to the test page URL.
  [36m--output-path[39m [36m(Path)[39m
    [90maliases: -o <value>[39m

ember version [36m<options...>[39m
  outputs ember-cli version
  [90maliases: v, --version, -v[39m
  [36m--verbose[39m [36m(Boolean)[39m [36m(Default: false)[39m

"
`;
